--- a/module 1/lesson 3/acp/style.css
+++ b/module 1/lesson 3/acp/style.css
@@ -1,8 +1,12 @@
 /*selectors*/
 h3 {
     text-decoration: line-through;
-} 
-p {text-align: center;}
+}
+
+p {
+    text-align: center;
+}
+
 h3 ::first-letter {
     font-size: 40px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
