--- a/website/Murgir Dokan/style.css
+++ b/website/Murgir Dokan/style.css
@@ -51,3 +51,9 @@ body {
     width: 100%;
     text-align: center;
 }
+.mm {
+    float: left;
+    margin-right: 50px;
+    margin-left: 50px;
+    width: 50%;
+}
